data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_749.wast
;; 10. **Test Description**: Place `nop` directly after the function entry and immediately before `br_table` having several indices, some exceeding the count of valid label branches.    - **Constraint**: Ensuring that `nop`’s proximity to function start does not affect `br_table` index handling.    - **Edge Case**: Guarantees `br_table`’s correct behavior with out-of-bounds targets.

(assert_malformed
  (module
    (func $test
      (nop)
      (block
        (br_table 0 1)
      )
    )
  )
  "br_table index out of bounds"
)